# pyTask

./: .gitignore  .note  key.py  pop_up.py  pyproject.toml  task_list.py
pytask/: KBhit.py  ihm.py  key.py  pop_up.py  task_list.py
